# app-soc-pipeline

./: Cargo.toml  README.md
assets/: data_template.json  schema.sql
config/: server.toml
src/: analyzer.rs  main.rs  parser.rs  server.rs  types.rs
