[package]
name = "app-soc-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
arc = "0.0.1"
chrono = "0.4.44"
fastrand = "2.4.1"
mutex = "1.0.2"
regex = "1.12.3"
rusqlite = "0.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { version = "1.51.1", features = ["full"] }
toml = "1.1.2"
